--- a/views/footer.html
+++ b/views/footer.html
@@ -170,3 +170,6 @@
     </div>
   </div>
 </footer>
+<div class="scroll-top brand-primary-bg text-center pointer" ng-controller="headerctrl" ng-click="goToTop();">
+  <span class="brand-primary-lighter inline-block"><i class="fa fa-angle-up"></i></span>
+</div>
