--- a/views/content/home.html
+++ b/views/content/home.html
@@ -170,7 +170,7 @@
               </div>
               <p class="descp m-center">Recipes that help you eat right without compromising on taste.</p>
               <div class="more text-center">
-                <button class="btn btn-primary text-uppercase" type="button">Coming Soon</button>
+                <a ui-sref="recipes" class="btn btn-primary text-uppercase" type="button">Know more</a>
               </div>
             </div>
           </div>
