--- a/views/footer.html
+++ b/views/footer.html
@@ -92,8 +92,7 @@
                 </a>
               </li>
               <li>
-                <a href="" title="Recipes">RECIPES
-                  <span class="white" style="font-size:10px">(Coming Soon)</span>
+                <a href="#/recipes" title="Recipes">RECIPES
                 </a>
               </li>
               <li>
