change menu icon

--- a/views/menu.html
+++ b/views/menu.html
@@ -1,4 +1,4 @@
-<button type="button" name="button" class="backsidemenu" slide-menu><i class="fa fa-chevron-left"></i></button><ul>
+<button type="button" name="button" class="backsidemenu" slide-menu><i class="fa fa-times"></i></button><ul>
     <li ng-repeat="menu in navigation" class="{{menu.classis}} {{menu.lineClass}}">
         <a href="{{menu.link}}" class=" {{menu.nocursor}}">{{menu.name}}</a>
         <ul class="submenu" ng-if="menu.subnav!='';">
