--- a/views/content/recipes.html
+++ b/views/content/recipes.html
@@ -25,7 +25,7 @@
         <span class="block">-75% of calories from Carbohydrates</span>
         <span class="block">-20% of calories from lean Protein sources</span>
         <span class="block">-20% of calories from healthy Fats (mainly poly/mono unsaturated)</span>
-        <span class="block">Keeping this in mind, start eating your way to good health today!</span>
+        <span class="block" style="margin-top: 10px;">Keeping this in mind, start eating your way to good health today!</span>
       </div>
     </div>
   </div>
