--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -36,7 +36,7 @@
                   <span class="noconsult brand-brown-dark font-semibold">{{plan.months}}</span>
                   <span class="text-uppercase white month font-gotham-bold" ng-show="plan.months==1">Month</span>
                   <span class="text-uppercase white month font-gotham-bold" ng-hide="plan.months==1">Months</span>
-                  <span class="text-uppercase white duration font-gotham-bold">Duration</span>
+                  <!-- <span class="text-uppercase white duration font-gotham-bold">Duration</span> -->
                 </span>
 
                 <span ng-if="isBottom">
