--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -72,7 +72,7 @@
               <img src="img/about/checks.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Health Checks<span>&amp; Presentations</span></h3>
             </div>
-            <p>We give corporate/clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
+            <p>We give corporates/clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight - loss tips.</p>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
               <img src="img/about/foods.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Health<span>Foods</span></h3>
             </div>
-            <p>New food products are tried, tested and constantly added to our in-house health shop. This includes Selfcare food products and Suman's cookbooks. These products also available online.</p>
+            <p>We are constantly creating, trying and testing new food products and adding them to our in - house health shop.</p>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
               <img src="img/about/workers.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Corporate<span>Care Programmes</span></h3>
             </div>
-            <p>We have corporate packages/presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
+            <p>We have corporate packages to motivate employees to lead a healthy way of life. Our packages include diet, exercise management and weight - loss tips.</p>
           </div>
         </div>
       </div>
