--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -7,9 +7,7 @@
   </div>
   <div class="container">
     <div class="get-up brand-brown-bg relate">
-      <p class="text-justify white health-descp">Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. A right plan can contribute significantly to recover from lifestyle, hormonal and genetics related disorder. We provide a tailor made diet plan
-        to overcome these health and well being complaints and also target weight loss. Along with nutritional advice we examine stipulated blood test to see if you are genetically pre-disposed to any health ailments will also recommend vitamins to help
-        keep future disorder at bay. These are specialized plans aimed at individual with particular needs such as pregnancy, weight gain, inch loss etc. A personalized and detailed diet chart will be created to meet your specific requirements.</p>
+      <p class="text-justify white health-descp">Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. The right diet plan can contribute significantly to the recovery from lifestyle, hormonal and genetics related disorders. We provide tailor-made diet plans to overcome health &amp; wellbeing complaints while also targeting weight loss. Along with nutritional advice, we examine stipulated blood reports to see if you are genetically pre-disposed to any health ailments and also recommend vitamins to help keep future disorders at bay. These are specialized plans aimed at individuals with specific needs such as cholesterol, diabetes, PCOS pregnancy, etc.</p>
     </div>
     <div class="health-manageselect">
       <div class="row-flex" ng-repeat="row in subpackages">
