--- a/views/content/home.html
+++ b/views/content/home.html
@@ -31,7 +31,7 @@
       <div class="col-md-4 col-sm-6">
         <div class="health-info">
           <h3 class="brand-primary title text-uppercase font-gotham-bold">Health <span class="block">Packages</span></h3>
-          <p class="text-justify health-descp">Our health packages are a right blend of food with science. whether its managing any kind of health disorder, improving vitamin deficiency, shedding extra kilos  or looking for specialized diet. We have it all for all age groups. We believe in losing weight in the right manner and not losing hair, immunity, muscle and bone.</p>
+          <p class="text-justify health-descp">Our packages focus on your health and weight management. Whether it’s managing any kind of health disorder, improving vitamin deficiency, shedding extra kilos or looking for specialized diet, we have it all for all age groups. By combining food with science, we ensure that as you lose weight your overall health and immunity improves.</p>
           <a href="#/healthpackages" class="btn btn-primary text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-package.png" alt="" class="img-responsive">
@@ -39,9 +39,9 @@
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
-        <div class="health-info">
+        <div class="health-info"> 
           <h3 class="brand-yellow title text-uppercase font-gotham-bold">Health <span class="block">Products</span></h3>
-          <p class="text-justify health-descp">We have cook books written by our founder Mrs. Suman Agarwal with a team of culinary expert and nutritionist. A variety of snacks and munchies and an extensive range of vital vitamins.  These help to maintain immunity, hair, skin and correct deficiencies and alleviate chronic ailments. Our range of protein supplements help to support strength training. And electronics like pedometer, weighing scale to help you monitor your health goals.</p>
+          <p class="text-justify health-descp">Healthy snacks &amp; munchies, an extensive range of vital vitamins, protein supplements, Suman Agarwal’s highly acclaimed cookbooks and workout aids like pedometers and weighing scales, we have everything you need to reach your health goals.</p>
           <a href="#/healthproducts/1" class="btn btn-yellow text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-products.png" alt="" class="img-responsive">
