--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -25,6 +25,8 @@
       <h3 class="get-center brand-brown-dark">No Plan For
         {{selectedPackage.name}}</h3>
     </div>
+
+
     <div class="health-chart">
       <div class="row">
         <div class="col-md-offset-1 col-md-10 col-sm-12">
@@ -63,13 +65,14 @@
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
-                <uib-tab ng-repeat="subplan in plan.subplans track by $index">
+
+                <uib-tab ng-repeat="subplan in plan.subplans track by $index" active="subplan.active" ng-click="select2(subplan)">
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-bold text-uppercase" ng-if="$index==0">silver</p>
-                      <p class="white text-bold text-uppercase" ng-if="$index==1">gold</p>
-                      <p class="white text-bold text-uppercase" ng-if="$index==2">platinum</p>
-                      <p class="white text-bold text-uppercase" ng-if="$index==3">diamond</p>
+                      <p class="white text-bold text-uppercase" active="subplan.active" ng-if="$index==0">silver</p>
+                      <p class="white text-bold text-uppercase" active="subplan.active" ng-if="$index==1">gold</p>
+                      <p class="white text-bold text-uppercase" active="subplan.active" ng-if="$index==2">platinum</p>
+                      <p class="white text-bold text-uppercase" active="subplan.active" ng-if="$index==3">diamond</p>
                       <p class="price">Rs
                         {{subplan.price_in_INR}}
                         <sup>*</sup>
