--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -53,7 +53,7 @@
   <div class="what-we-do">
     <div class="container">
       <h2 class="text-uppercase text-center brand-brown-dark font-semibold doing">This is what we are also doing:</h2>
-      <p class="text-center">As the industry experts in diet, health and food management, this is what we have already consulted on:</p>
+      <!-- <p class="text-center">As the industry experts in diet, health and food management, this is what we have already consulted on:</p> -->
       <div class="row">
 
         <div class="col-md-6">
