--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -244,7 +244,7 @@
                     </div>
                     <div class="form-group">
 <div class="custom-select">
-                      <select name="shippingstate" ng-model="checkout.shippingstate" required>
+                      <select name="shippingstate" ng-model="checkout.shippingstate" required class="form-control">
                         <option value="">Select State</option>
                         <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
                         <option value="Andhra Pradesh">Andhra Pradesh</option>
