--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -45,7 +45,7 @@
           </div>
           <div class="accept">
             <div class="checkbox">
-              <input type="checkbox" ng-model="accept" class="text-uppercase" id="accept">
+              <input type="checkbox" ng-model="accept" ng-change="acceptIt(accept)" class="text-uppercase" id="accept">
               <label for="accept" class="text-light text-uppercase">
                 <span></span> I Accept The Terms And Conditions And Privacy Policy Of The Website
               </label>
