--- a/views/header.html
+++ b/views/header.html
@@ -50,7 +50,7 @@
             </div>
             <div class="cart-icon relate">
               <a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i>
-              <div class="bagde round"><span class="white" ng-bind="badgeCount"></span></div>
+              <div class="bagde round"><span class="white">{{badgeCount}}</span></div>
               </a>
             </div>
             <!-- {{user}} -->
