changes done as per told

--- a/views/footer.html
+++ b/views/footer.html
@@ -124,9 +124,9 @@
               </div>
 
             </form>
-            <div class="text-center" ng-show="subsresponse">
+            <h4 class="text-center" ng-show="subsresponse">
               {{msg}}
-            </div>
+            </h4>
           </div>
           <div class="social-links social-links2 foot-sociallinks brand-primary-light">
             <ul>
