--- a/views/content/account.html
+++ b/views/content/account.html
@@ -70,7 +70,7 @@
                     <div class="account-name">
                       <form ng-submit="">
                         <button class="pull-right edit" ng-click="editProfile(3)" type="submit">{{profile.billingaddressedit}}</button>
-                        <h5 class="brand-primary">BILLING ADDRESS</h5>
+                        <h5 class="brand-brown-dark">BILLING ADDRESS</h5>
                         <p>{{user.billingline1}}
                           <br>{{user.billingline2}}
                           <br>{{user.billingline3}}
@@ -137,7 +137,7 @@
                     <div class="account-name">
                       <form ng-submit="">
                         <button class="pull-right edit" ng-click="editProfile(4)" type="submit">{{profile.shippingaddressedit}}</button>
-                        <h5 class="brand-primary">SHIPPING ADDRESS</h5>
+                        <h5 class="brand-brown-dark">SHIPPING ADDRESS</h5>
                         <p>{{user.shippingline1}}
                           <br>{{user.shippingline2}}
                           <br>{{user.shippingline3}}
