--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -27,7 +27,7 @@
                 <th>subtotal: rs.
                   {{totalcart - shippingcharges}}</th>
                 <th>grandtotal: rs.
-                  {{totalcart }}</th>
+                  {{totalcart - shippingcharges}}</th>
               </thead>
             </table>
           </div>
@@ -81,7 +81,7 @@
                 <th>subtotal: rs.
                   {{totalcart - shippingcharges}}</th>
                 <th>grandtotal: rs.
-                  {{totalcart}}</th>
+                  {{totalcart - shippingcharges}}</th>
               </thead>
             </table>
           </div>
@@ -95,7 +95,7 @@
                 <input name="lastname" ng-model="checkout.lastname" required type="text" placeholder="Last Name *" class="form-control">
               </div>
               <div class="form-group">
-                <input name="phone" ng-model="checkout.phone" required type="number" placeholder="Mobile Number *" class="form-control">
+                <input name="phone" ng-model="checkout.phone" required type="tel" placeholder="Mobile Number *" class="form-control">
               </div>
               <div class="form-group">
                 <input name="email" ng-model="checkout.email" required type="email" placeholder="Email *" class="form-control">
@@ -368,7 +368,7 @@
                 <th>subtotal: rs.
                   {{totalcart - shippingcharges}}</th>
                 <th>grandtotal: rs.
-                  {{totalcart}}</th>
+                  {{totalcart - shippingcharges}}</th>
               </thead>
             </table>
           </div>
