--- a/views/header.html
+++ b/views/header.html
@@ -7,10 +7,12 @@
 
           <div class="row">
             <div class="col-md-1 col-sm-3 col-xs-2">
-              <div class="hamburger pointer"  slide-menu>
-                <a class="ham"><span class="brand-primary-bg one"></span>
+              <div class="hamburger pointer" slide-menu>
+                <a class="ham">
+                  <span class="brand-primary-bg one"></span>
                   <span class="brand-primary-bg two"></span>
-                  <span class="brand-primary-bg three"></span></a>
+                  <span class="brand-primary-bg three"></span>
+                </a>
               </div>
             </div>
             <div class="col-md-11 col-sm-9 col-xs-10">
@@ -19,59 +21,88 @@
                   <a href="#/home">
                     <img src="img/logo.png" alt="">
                   </a>
-                    <span class="font-baubodi">for</span>
-                    <div class="head-slide">
-                      <flex-slider class="carousel" flex-slide="list in health track by $index" animation="fade" control-nav="false" direction-nav="false" animationspeed="200">
-                        <li>
-                          <a href="{{list.link}}">{{list.name}}</a>
-                        </li>
-                      </flex-slider>
-                    </div>
-                </h1>
-              </div>
+                  <span class="font-baubodi">for</span>
+                  <div class="head-slide">
+                    <flex-slider class="carousel" flex-slide="list in health track by $index" animation="fade" control-nav="false" direction-nav="false" animationspeed="200">
+                    <li>
+                      <a href="{{list.link}}">{{list.name}}</a>
+                    </li>
+                  </flex-slider>
+                </div>
+              </h1>
             </div>
           </div>
-
         </div>
-        <div class="col-md-6 col-sm-12 col-xs-12">
-          <div class="links">
-            <div class="social-links">
-              <ul>
-                <!-- <li><a href="#/cart"><i class="fa fa-shopping-cart"></i></a></li> -->
-                <li><a href="https://www.facebook.com/selfcarebysuman" target="_blank"><i class="fa fa-facebook "></i></a></li>
-                <li><a href="https://twitter.com/selfcarebysuman" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://www.instagram.com/selfcarebysuman" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://www.pinterest.com/selfcarebysuman" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
-              </ul>
-            </div>
-            <div class="contact-tel letter-space">
-              <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
-            </div>
-            <div class="cart-icon relate">
-              <a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i>
-              <div class="bagde round" ng-controller="headerctrl"><span class="white">{{badge.Count}}</span></div>
-              </a>
-            </div>
-            <!-- {{user}} -->
-            <div class="user-login text-center">
-              <div class="signin letter-space" ng-show="!enablelogout">
-                <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
+
+      </div>
+      <div class="col-md-6 col-sm-12 col-xs-12">
+        <div class="links">
+          <div class="social-links">
+            <ul>
+              <!-- <li><a href="#/cart"><i class="fa fa-shopping-cart"></i></a></li> -->
+              <li>
+                <a href="https://www.facebook.com/selfcarebysuman" target="_blank">
+                  <i class="fa fa-facebook "></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/selfcarebysuman" target="_blank">
+                  <i class="fa fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/selfcarebysuman" target="_blank">
+                  <i class="fa fa-instagram"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" target="_blank">
+                  <i class="fa fa-youtube"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.pinterest.com/selfcarebysuman" target="_blank">
+                  <i class="fa fa-pinterest-p"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="contact-tel letter-space">
+            <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
+          </div>
+          <div class="cart-icon relate">
+            <a href="#/cart" ng-controller="countChange">
+
+              <i class="fa fa-shopping-cart brand-primary"></i>
+              <div class="bagde round">
+
+                <span class="white">{{badge.Count}}</span>
               </div>
-              <div class="signin letter-space" ng-show="enablelogout">
-                <div class="text-uppercase font-semibold relate pointer show-submenu">
-                  <span class="block name brand-primary ">{{user.name}}</span>
-                  <ul class="account-submenu">
-                    <li><a ui-sref="account()" class="text-uppercase font-semibold">My profile</a></li>
-                    <li><a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a></li>
-                  </ul>
-                </div>
+            </a>
+          </div>
+          <!-- {{user}} -->
+          <div class="user-login text-center">
+            <div class="signin letter-space" ng-show="!enablelogout">
+              <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
+            </div>
+            <div class="signin letter-space" ng-show="enablelogout">
+              <div class="text-uppercase font-semibold relate pointer show-submenu">
+                <span class="block name brand-primary ">{{user.name}}</span>
+                <ul class="account-submenu">
+                  <li>
+                    <a ui-sref="account()" class="text-uppercase font-semibold">My profile</a>
+                  </li>
+                  <li>
+                    <a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-
     </div>
+
   </div>
+</div>
 </header>
