--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -123,7 +123,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <input name="billingline3" ng-change="sameShipping(checkout)" required ng-model="checkout.billingline3" type="text" class="form-control" placeholder="Nearest Address *">
+                      <input name="billingline3" ng-change="sameShipping(checkout)" required ng-model="checkout.billingline3" type="text" class="form-control" placeholder="Nearest landmark *">
                       <div class="text-center" ng-show="billingForm.billingline3.$invalid && billingForm.billingline3.$touched" role="alert">
                         Please enter your billing nearest landmark.
                       </div>
