--- a/views/content/orderlist.html
+++ b/views/content/orderlist.html
@@ -14,11 +14,11 @@
             <uib-tab-heading><span class="text-uppercase pointer" ui-sref="account">my profile</span></uib-tab-heading>
           </uib-tab>
           <uib-tab>
-            <uib-tab-heading><span class="text-uppercase tab-active pointer" ui-sref="orderlist">order list</span></uib-tab-heading>
-            <div class="relate no-plan" ng-if="orders==''">
-              <h3 class="get-center brand-brown-dark">No Orders</h3>
+            <uib-tab-heading><span class="text-uppercase tab-active pointer" ui-sref="orderlist" active="true">order list </span></uib-tab-heading>
+            <div class="relate no-plan">
+              <h3 class="get-center brand-brown-dark">{{msg}}</h3>
             </div>
-            <div class="order-tab" ng-if="orders!=''">
+            <div class="order-tab" ng-if="!orders.plans == ''">
               <div class="cart-table">
                 <table class="table">
                   <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
@@ -56,7 +56,6 @@
                     </tr>
                   </tbody>
                 </table>
-
                 <!-- <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
                   <span class="text-uppercase pull-left">Grand Total</span>
                   <span class="pull-right text-uppercase">Rs. 375.00</span>
